# VitraePluginPhongShading

./: CMakeLists.txt  README.md
include/VitraePluginPhongShading/: Setup.hpp
include/VitraePluginPhongShading/Standard/: Params.hpp  Textures.hpp
include/VitraePluginPhongShading/converters/: aiPBSConvert.hpp  aiPhongConvert.hpp
include/VitraePluginPhongShading/tasks/: shadingPBS.hpp  shadingPhong.hpp
src/: Setup.cpp
